; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_timing_generator.c_dce120_tg_set_blank.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_timing_generator.c_dce120_tg_set_blank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timing_generator = type { i32 }
%struct.dce110_timing_generator = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@CRTC0_CRTC_DOUBLE_BUFFER_CONTROL = common dso_local global i32 0, align 4
@CRTC_BLANK_DATA_DOUBLE_BUFFER_EN = common dso_local global i32 0, align 4
@CRTC0_CRTC_BLANK_CONTROL = common dso_local global i32 0, align 4
@CRTC_BLANK_DATA_EN = common dso_local global i32 0, align 4
@mmCRTC0_CRTC_BLANK_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dce120_tg_set_blank(%struct.timing_generator* %0, i32 %1) #0 {
  %3 = alloca %struct.timing_generator*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.dce110_timing_generator*, align 8
  store %struct.timing_generator* %0, %struct.timing_generator** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.timing_generator*, %struct.timing_generator** %3, align 8
  %7 = call %struct.dce110_timing_generator* @DCE110TG_FROM_TG(%struct.timing_generator* %6)
  store %struct.dce110_timing_generator* %7, %struct.dce110_timing_generator** %5, align 8
  %8 = load i32, i32* @CRTC0_CRTC_DOUBLE_BUFFER_CONTROL, align 4
  %9 = load i32, i32* @CRTC_BLANK_DATA_DOUBLE_BUFFER_EN, align 4
  %10 = call i32 @CRTC_REG_SET(i32 %8, i32 %9, i32 1)
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32, i32* @CRTC0_CRTC_BLANK_CONTROL, align 4
  %15 = load i32, i32* @CRTC_BLANK_DATA_EN, align 4
  %16 = call i32 @CRTC_REG_SET(i32 %14, i32 %15, i32 1)
  br label %27

17:                                               ; preds = %2
  %18 = load %struct.timing_generator*, %struct.timing_generator** %3, align 8
  %19 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @mmCRTC0_CRTC_BLANK_CONTROL, align 4
  %22 = load %struct.dce110_timing_generator*, %struct.dce110_timing_generator** %5, align 8
  %23 = getelementptr inbounds %struct.dce110_timing_generator, %struct.dce110_timing_generator* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @dm_write_reg_soc15(i32 %20, i32 %21, i32 %25, i32 0)
  br label %27

27:                                               ; preds = %17, %13
  ret void
}

declare dso_local %struct.dce110_timing_generator* @DCE110TG_FROM_TG(%struct.timing_generator*) #1

declare dso_local i32 @CRTC_REG_SET(i32, i32, i32) #1

declare dso_local i32 @dm_write_reg_soc15(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
